@@ -2,6 +2,7 @@ Changelog for Zodiac
 
 Version 1.1.1 Changes:
 - Fixed a rounding issue that could result in some Wormholes in 1.0 galaxies not being loaded correctly
+- Added an ingame warning popup when trying to start with the wrong galaxy size setting
 
 Version 1.1 Changes:
 - Added a support-grid with customizable resolution in parsecs (decimal numbers allowed); also added snap-to-grid toggle
